# Tiger

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  build_all.sh
.github/: FUNDING.yml
DMScu/: CMakeLists.txt
DMScu/include/: DMScu_MathOperators.h  DMScu_StepVectorRange.h  DMScu_VectorRange.h
DMScu/src/: CommonMakefile.mk  Makefile.Linux.GCC64  mathopt_tester.cc  vec_range_tester.cc
docs/: MatrixDoc.docx
include/: BaseMathOperators.h  Complex.h  DenseMatrixBase.h  DenseMatrixBase.tcc  MathOperators.h  Matrix.h  Matrix.tcc  MatrixBase.h  MatrixBase.tcc  StepVectorRange.h  SymmMatrixBase.h  SymmMatrixBase.tcc  VectorRange.h
include/Tiger/: BaseMathOperators.h  Complex.h  DenseMatrixBase.h  DenseMatrixBase.tcc  MathOperators.h  Matrix.h  Matrix.tcc  MatrixBase.h  MatrixBase.tcc  StepVectorRange.h  SymmMatrixBase.h  SymmMatrixBase.tcc  VectorRange.h
src/: CommonMakefile.mk  Makefile.Linux.GCC64  Makefile.Linux.GCC64D  matrix_tester.cc  matrix_tester_output.txt
test/: matrix_test_file.csv
